Update header choices

--- a/index.html
+++ b/index.html
@@ -1257,8 +1257,10 @@ table tr {
     </nav>
     <div class=options>
       <nav class="option open">Home</nav>
-      <nav class=option>Multiplayer</nav>
+      <nav class=option>Avatars</nav>
+      <nav class=option>Builder</nav>
       <nav class=option>Land</nav>
+      <nav class=option>Rooms</nav>
     </div>
   </div>
   <a class="button right" href="https://github.com/exokitxr/exokit">View Source</a>
