Add native icon

--- a/index.html
+++ b/index.html
@@ -1318,6 +1318,13 @@ table tr {
       <i class="fas fa-user-headset"></i>
     </div>
   </a>
+  <div class=spacer></div>
+  <a href="https://native.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Native</h3>
+      <i class="far fa-window-alt"></i>
+    </div>
+  </a>
   <div class=background></div>
 </div>
 
