Update icons again

--- a/index.html
+++ b/index.html
@@ -1256,11 +1256,12 @@ table tr {
       <i class="fas fa-chevron-down"></i>
     </nav>
     <div class=options>
-      <nav class="option open">Home</nav>
+      <nav class="option open">Builder</nav>
       <nav class=option>Avatars</nav>
-      <nav class=option>Builder</nav>
       <nav class=option>Land</nav>
       <nav class=option>Rooms</nav>
+      <nav class=option>Sandbox</nav>
+      <nav class=option>Native</nav>
     </div>
   </div>
   <a class="button right" href="https://github.com/exokitxr/exokit">View Source</a>
@@ -1290,7 +1291,7 @@ table tr {
 <div class=tiles>
   <a href="https://browser.exokit.org" class=tile>
     <div class=wrap>
-      <h3>Home</h3>
+      <h3>Builder</h3>
       <i class="fas fa-warehouse-alt"></i>
     </div>
   </a>
@@ -1298,12 +1299,6 @@ table tr {
     <div class=wrap>
       <h3>Avatars</h3>
       <i class="fas fa-user-ninja"></i>
-    </div>
-  </a>
-  <a href="https://web.exokit.org" class=tile>
-    <div class=wrap>
-      <h3>Builder</h3>
-      <i class="fas fa-tools"></i>
     </div>
   </a>
   <a href="https://land.exokit.org" class=tile>
@@ -1316,6 +1311,12 @@ table tr {
     <div class=wrap>
       <h3>Rooms</h3>
       <i class="fas fa-user-headset"></i>
+    </div>
+  </a>
+  <a href="https://web.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Sandbox</h3>
+      <i class="fas fa-vial"></i>
     </div>
   </a>
   <div class=spacer></div>
