Update sponsors link

--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@ table tr {
     </div>
   </div>
   <a class="button right" href="https://github.com/exokitxr/exokit">View Source</a>
-  <a href="https://github.com/sponsors/modulesio" class="button highlight">Sponsor on GitHub</a>
+  <a href="https://github.com/sponsors/avaer" class="button highlight">Sponsor on GitHub</a>
 </header>
 
 <canvas id=hero-canvas></canvas>
