--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Metaverse toolkit - Exokit</title>
   <link rel="icon" href="media/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <style>
 
 /* global.css */
