Increase heading sizes

--- a/index.html
+++ b/index.html
@@ -157,11 +157,18 @@ body {
 
 .home #overlay {
     position: absolute;
-    margin-top: 30vh;
+    margin-top: 20vh;
     margin-left: 50px;
     width: 40vw;
     /* height: 100%; */
     top: 0; 
+}
+
+.home #overlay h1 {
+  font-size: 36px;
+}
+.home #overlay h2 {
+  font-size: 20px;
 }
 
 .home .heroDL:hover{
