--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@ table tr {
   <div id=heroPusher></div>
   <div id="overlay-subs">
     <div class="overlay-sub">
-      <h4>Works on</h4>
+      <!-- <h4>Works on</h4> -->
       <div class=links>
         <div href="https://get.webmr.io/mac" class="link i"><i class="fab fa-apple"></i></div>
         <div href="https://get.webmr.io/linux" class="link i"><i class="fab fa-linux"></i></div>
