Add spatial engine link

--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,7 @@ table tr {
       <nav class=option>Avatars</nav>
       <nav class=option>Land</nav>
       <nav class=option>Rooms</nav>
+      <nav class=option>Spatial</nav>
       <nav class=option>Sandbox</nav>
       <nav class=option>Native</nav>
     </div>
@@ -1319,6 +1320,12 @@ table tr {
     <div class=wrap>
       <h3>Rooms</h3>
       <i class="fas fa-user-headset"></i>
+    </div>
+  </a>
+  <a href="https://spatial-engine.exokit.org" class=tile>
+    <div class=wrap>
+      <h3>Spatial</h3>
+      <i class="fas fa-user-astronaut"></i>
     </div>
   </a>
   <a href="https://web.exokit.org" class=tile>
