--- a/index.html
+++ b/index.html
@@ -1345,11 +1345,9 @@ table tr {
 </div>
 
 <script src="https://kit.fontawesome.com/0735724151.js"></script>
-<script src="js/three.min.js"></script>
-<script src="js/Reflector.js"></script>
-<script src="js/GLTFLoader.js"></script>
-<script src="js/skin.js"></script>
-<script src="js/hero.js"></script>
+<!-- <script src="js/GLTFLoader.js"></script>
+<script src="js/skin.js"></script> -->
+<script src="js/hero.js" type=module></script>
 
 </body>
 </html>
