--- a/index.html
+++ b/index.html
@@ -1137,17 +1137,29 @@ canvas {
   height: 100vh;
   /* background-color: #000; */
 }
-table {
-  width: 100%;
+.keys {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  display: flex;
+  flex-direction: column;
 }
-table colgroup col:nth-child(1) {
-  width: 20%;
+.keys .row {
+  display: flex;
 }
-table colgroup col:nth-child(3) {
-  width: 60%;
+.keys .key {
+  display: flex;
+  width: 50px;
+  height: 40px;
+  margin: 2px;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #000;
+  border-radius: 7px;
+  font-size: 20px;
 }
-table tr {
-  background-color: #f2f3f5;
+.keys .key:empty {
+  visibility: hidden;
 }
 .tiles {
   display: flex;
@@ -1155,9 +1167,9 @@ table tr {
   padding: 50px;
   left: 0;
   right: 0;
-  /* width: 40vw; */
   bottom: 0;
   overflow: hidden;
+  pointer-events: none;
 }
 .tiles .tile {
   position: relative;
@@ -1165,27 +1177,12 @@ table tr {
   background-color: #FFF;
   --color: #7e57c2;
   z-index: 1;
+  pointer-events: all;
 }
 .tiles .tile:hover {
   --color: #ef5350;
   color: var(--color);
-  /* background-color: #CCC; */
 }
-/* .tiles .tile:nth-child(1) {
-  --color: #7e57c2;
-}
-.tiles .tile:nth-child(2) {
-  --color: #5c6bc0;
-}
-.tiles .tile:nth-child(3) {
-  --color: #ff7043;
-}
-.tiles .tile:nth-child(4) {
-  --color: #ef5350;
-}
-.tiles .tile:nth-child(5) {
-  --color: #66bb6a;
-} */
 .tiles .tile:hover {
 }
 .tiles .tile .wrap {
@@ -1216,16 +1213,6 @@ table tr {
   border: 5px solid var(--color);
   content: '';
 }
-/* .tiles .tile::after {
-  transform: skew(0, -45deg);
-  position: absolute;
-  top: -5px;
-  right: -10px;
-  width: 10px;
-  height: 100%;
-  background-color: #CCC;
-  content: '';
-} */
 .tiles .tile h3 {
   margin: 0;
   text-transform: uppercase;
@@ -1296,6 +1283,18 @@ table tr {
         <div class="link img"><img src="media/magicleap.svg"></div>
       </div>
     </div>
+  </div>
+</div>
+<div class=keys>
+  <div class=row>
+    <div class=key></div>
+    <div class=key>W</div>
+    <div class=key></div>
+  </div>
+  <div class=row>
+    <div class=key>A</div>
+    <div class=key>S</div>
+    <div class=key>D</div>
   </div>
 </div>
 <div class=tiles>
