--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@ canvas {
 
 <div id="overlay">
   <h1>Build a metaverse you own</h1>
-  <h2 class="font-weight-light">Tools for virutal worlds in the browser. Works on all headsets.</h2>
+  <h2 class="font-weight-light">Tools for virtual worlds in the browser. Works on all headsets.</h2>
   <div id=heroPusher></div>
   <div id="overlay-subs">
     <div class="overlay-sub">
